# shave

./: .gitignore  AUTHORS  COPYING  Makefile  README
shave/: shave-libtool.in  shave.in  shave.m4
test/: Makefile.am  configure.ac
test-cxx/: Makefile.am  configure.ac
test-cxx/examplelib/: Makefile.am  something.cc
test-cxx/examplelib/sub/: sub.cc
test-cxx/tools/: Makefile.am  tool0.cc
test-flat-lt/: .gitignore  Makefile.am  configure.ac  lib-file0.h  lib-file1.c  tool0.c
test-flat-nolt/: Makefile.am  configure.ac  no-libtool.c
test/foo/: .gitignore  Makefile.am  lib-file0.c  lib-file1.h
test/foo/internal/: Makefile.am  internal-file0.c  internal-file0.h
test/tools/: Makefile.am
