AC_INIT([testflat], [1.0], [damien.lespiauAgmailDcom])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_MACRO_DIR([../shave])
AC_CONFIG_HEADERS([config.h])
AC_PROG_LIBTOOL
AC_PROG_CC
AC_PROG_CXX
SHAVE_INIT([../shave], [verbose])
AC_CONFIG_FILES([
    ../shave/shave
    ../shave/shave-libtool
    Makefile
    examplelib-1.0.pc
    tools/Makefile
    examplelib/Makefile
    examplelib/sub/Makefile
])
AC_OUTPUT
