AC_INIT([testflat], [1.0], [damien.lespiauAgmailDcom])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_MACRO_DIR([../shave])
AC_CONFIG_HEADERS([config.h])
AC_PROG_LIBTOOL
AC_PROG_CC
SHAVE_INIT([../shave], [enable])
AC_CONFIG_FILES([
    ../shave/shave
    ../shave/shave-libtool
    Makefile
    tools/Makefile
    foo/Makefile
    foo/internal/Makefile
])
AC_OUTPUT
